--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "lucide-react": "0.105.0-alpha.4",
+    "ms": "^2.1.3",
     "next": "^13.3.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
@@ -25,13 +27,16 @@
     "react-dom": "^18.2.0",
     "sharp": "^0.31.3",
     "tailwind-merge": "^1.12.0",
-    "tailwindcss-animate": "^1.0.5"
+    "tailwindcss-animate": "^1.0.5",
+    "xmldom": "^0.6.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
+    "@types/ms": "^0.7.31",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "@types/xmldom": "^0.1.31",
     "@typescript-eslint/parser": "^5.58.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.31.0",
